--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "erainstitute-web",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -30,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:pyBae-py/erainstitute-web.git",
+  "author": "pyBae-py <sajeel.ahmed@protonmail.com>",
+  "license": "MIT"
 }
