:sparkles: Add Header

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "mdbreact": "^4.25.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -36,5 +37,6 @@
   "main": "index.js",
   "repository": "git@github.com:pyBae-py/erainstitute-web.git",
   "author": "pyBae-py <sajeel.ahmed@protonmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://erainstitute.000webhostapp.com/"
 }
